Fixes #3 : Set field widths, alignment, and floats

--- a/css/luggage_people.css
+++ b/css/luggage_people.css
@@ -329,11 +329,14 @@ view.view-people.view-id-people.view-display-id-people.profile-wrapper {
 .field.field-name-field-people-advisor .field-label,
 .field.field-name-field-people-education .field-label,
 .field.field-name-field-people-cv .field-label {
-    width: 150px;
+    width: 25%;
     padding: 5px;
     color: #666;
     display: inline-block;
     font-weight: bold;
+    text-align: right;
+    box-sizing: border-box;
+    float: left;
 }
 
 .field.field-name-field-people-expertise .field-items,
@@ -347,8 +350,9 @@ view.view-people.view-id-people.view-display-id-people.profile-wrapper {
 .field.field-name-field-people-education .field-items,
 .field.field-name-field-people-cv .field-items {
     padding: 5px;
-    border-left: 2px solid #bbb;
     display: inline-block;
+    width: 75%;
+    box-sizing: border-box;
 }
 
 .field.field-name-field-people-expertise .field-item,
